--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "knex": "node --import tsx ./node_modules/.bin/knex",
+    "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
     "lint": "eslint src -ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "fastify": "^4.26.2",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.28",
     "eslint": "^8.57.0",
-    "knex": "^2.4.2",
+    "knex": "^2.5.1",
     "tsx": "^4.7.1"
   }
 }
