--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "fastify": "^4.26.2",
