--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
     "lint": "eslint src -ext .ts --fix"
@@ -25,8 +25,11 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.28",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "knex": "^2.5.1",
-    "tsx": "^4.7.1"
+    "supertest": "^6.3.4",
+    "tsx": "^4.7.1",
+    "vitest": "^1.4.0"
   }
 }
