--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "vitest",
     "dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build --external src/db/*.db",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
     "lint": "eslint src -ext .ts --fix"
   },
@@ -29,6 +30,7 @@
     "eslint": "^8.57.0",
     "knex": "^2.5.1",
     "supertest": "^6.3.4",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "vitest": "^1.4.0"
   }
