Update build script to include external dependencies

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "vitest",
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src --out-dir build --external src/db/*.db",
+    "build": "tsup src/**/*.ts --external better-sqlite3 --external pg --external mysql2 --external mysql --external tedious --external pg-query-stream --external oracledb --out-dir build",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
     "lint": "eslint src -ext .ts --fix"
   },
@@ -19,16 +19,17 @@
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "fastify": "^4.26.2",
-    "sqlite3": "^5.1.7",
     "typescript": "^5.4.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/knex": "^0.16.1",
     "@types/node": "^20.11.28",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "knex": "^2.5.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
